<?xml version="1.0" encoding="utf-8"?>
<resources>

    <string name="app_name">FastBird</string>
    <string name="title_activity_main">Fast Bird</string>
    <string name="hello_world">Hello world!</string>
    <string name="action_settings">Settings</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="name">Name</string>
    <string name="balance">Balance: %1$s</string>
    <string name="order_number">%1$s</string>
    <string name="order_to">%1$s</string>
    <string name="phone1">%1$s</string>
    <string name="phone2">%1$s</string>
    <string name="total_amount">Total Amount: %1$s</string>
    <string name="bold_total_amount"><![CDATA[<b>Total Amount</b>]]>: %1$s</string>
    <string name="total_bd">Total (BD): %1$s</string>
    <string name="service_type">Service Type: %1$s</string>
    <string name="date">Date: %1$s</string>
    <string name="bold_date"><![CDATA[<b>Date</b>]]>: %1$s</string>
    <string name="id">Payment ID: %1$s</string>
    <string name="collection_amount">Collection (BD): %1$s</string>
    <string name="fbd_number">FBD: %1$s</string>
    <string name="reference">Reference: %1$s</string>
    <string name="payment_method">Payment Method: %1$s</string>
    <string name="paymentResult">Payment: %1$s</string>
    <string name="bold_paymentResult"><![CDATA[<b>Payment</b>]]>: %1$s</string>
    <string name="fast_pay_code">Fast Pay: %1$s</string>
    <string name="fast_bird_number">Fast Bird Number: %1$s</string>
	<string name="error_required">Required</string>
	<string name="internation_weight_error">Cannot be less than 500</string>
    <string name="collection_amount_bd">Collection (BD): </string>
    <string name="total_amount_bd">Total (BD): </string>
    <string name="withdraw_money_mrbtotal">Collected Amount: %1$s</string>
    <string name="withdraw_money_checque_price">Bank Charges: %1$s</string>
    <string name="withdraw_money_net_total">Service Fee (BD): %1$s</string>
    <string name="approval_date">Approval Date: %1$s</string>
    <string name="deliverAddressTitle">Name: %1$s</string>
    <string name="deliverBlockNo">Block: %1$s</string>
    <string name="deliverBuildingNo">Building: %1$s</string>
    <string name="deliverContactName">Delivery Contact Name: %1$s</string>
    <string name="deliveryFlatNo">Flat: %1$s</string>
    <string name="deliveryLocation">Location: %1$s</string>
    <string name="deliveryNotes">Note: %1$s</string>
    <string name="deliveryPhone1">Phone1: </string>
    <string name="deliveryPhone2">Phone2: </string>
    <string name="deliveryRoad">Road: %1$s</string>
    <string name="paymentDate">Payment Date: %1$s</string>
    <string name="moneyDelivered">Money Delivered: %1$s</string>
    <string name="money">Money (BD): %1$s</string>
    <string name="credit">Credit: %1$s</string>
    <string name="moneyDeliveredType">Delivery Type: %1$s</string>
    <string name="orderDate">Order Date: %1$s</string>
    <string name="pickupAddressTitle">Pickup Address Title: %1$s</string>
    <string name="progressStatus">Status: %1$s</string>
    <string name="progressStatusDate">Date: %1$s</string>
    <string name="size">Size: %1$s</string>
    <string name="weight">Weight: %1$s</string>
    <string name="current_status">Current Status: %1$s</string>
    <string name="collectionAmount">Collection (BD): %1$s</string>
    <string name="serviceFee">Service Fee: %1$s</string>
    <string name="no_internet">Network Error, No Internet Connection</string>
    <string name="title_activity_update_order">UpdateOrderActivity</string>
    <string name="clear">Clear</string>
    <string name="no_items">No Items</string>
    <string name="search_btn">Search</string>
    <string name="search_order">Search Order</string>
    <string name="comments_btn">Comments</string>

</resources>