<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/layout_root"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:padding="10dp">

    <LinearLayout
        android:orientation="vertical"
        android:layout_gravity="center"
        android:gravity="center"
        android:layout_width="fill_parent"
        android:layout_height="fill_parent">

        <TextView
            android:textIsSelectable="true"
            android:id="@+id/textView1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Confirm Withdraw Money"
            android:textAppearance="?android:attr/textAppearanceLarge" />

        <TextView
            android:textIsSelectable="true"
            android:layout_marginTop="15dp"
            android:id="@+id/mrbTotal"
            android:text="@string/withdraw_money_mrbtotal"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textIsSelectable="true"
            android:layout_marginTop="15dp"
            android:id="@+id/chequePrice"
            android:text="@string/withdraw_money_checque_price"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />

        <TextView
            android:textIsSelectable="true"
            android:layout_marginTop="15dp"
            android:id="@+id/netTotal"
            android:text="@string/withdraw_money_net_total"
            android:layout_width="match_parent"
            android:layout_height="wrap_content" />


        <CheckBox
            android:textSize="12sp"
            android:layout_marginTop="10dp"
            android:id="@+id/checkboxTerms"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content" />

    </LinearLayout>
</LinearLayout>