<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:padding="15dp"
    android:descendantFocusability="beforeDescendants">

    <LinearLayout
        android:orientation="vertical"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingLeft="15dp"
        android:paddingTop="15dp"
        android:paddingBottom="15dp"
        android:paddingRight="15dp"
        android:background="@drawable/card_background_selector"
        android:descendantFocusability="afterDescendants">

        <ImageView
            android:visibility="gone"
            android:id="@+id/share"
            android:layout_gravity="right"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:src="@android:drawable/ic_menu_share" />

        <TextView
            android:id="@+id/orderNumber"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_number" />

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/orderTo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/order_to" />

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone 1: " />

            <TextView
                android:paddingTop="5dp"
                android:id="@+id/phone1"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone1" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:paddingTop="5dp"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="Phone 2: " />

            <TextView
                android:paddingTop="5dp"
                android:id="@+id/phone2"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/phone2" />
        </LinearLayout>

        <TextView
            android:paddingTop="5dp"
            android:id="@+id/orderStatus"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="Shipment Delivered" />

        <LinearLayout
            android:paddingTop="5dp"
            android:orientation="horizontal"
            android:layout_width="fill_parent"
            android:layout_weight="3"
            android:layout_height="wrap_content">

            <Button
                android:textSize="13sp"
                android:singleLine="true"
                android:ellipsize="end"
                android:layout_weight="1"
                android:text="Comments"
                android:id="@+id/btnComment"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="13sp"
                android:text="Info"
                android:layout_weight="1"
                android:id="@+id/btnInfo"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />

            <Button
                android:singleLine="true"
                android:ellipsize="end"
                android:textSize="13sp"
                android:text="Track Status"
                android:layout_weight="1"
                android:id="@+id/btnTrackStatus"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content" />
        </LinearLayout>

    </LinearLayout>
</FrameLayout>